--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -78,10 +78,14 @@ jobs:
       KAFKA_ADMIN_BUILD_ARTIFACT: 'kafka-admin-client'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: AdoptOpenJDK/install-jdk@v1
-        with:
-          version: '11'
+      - uses: actions/checkout@v3
+      - name: Set up JDK 21
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '21'
+        server-id: ossrh # Value of the distributionManagement/repository/id field of the pom.xml
+        settings-path: ${{ github.workspace }} # location for the settings.xml file
       - name: Download kafka-admin-client artifact
         uses: actions/download-artifact@v1
         with:
@@ -146,10 +150,14 @@ jobs:
       KAFKA_ADMIN_BUILD_ARTIFACT: 'kafka-admin-client'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: AdoptOpenJDK/install-jdk@v1
-        with:
-          version: '11'
+      - uses: actions/checkout@v3
+      - name: Set up JDK 21
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '21'
+        server-id: ossrh # Value of the distributionManagement/repository/id field of the pom.xml
+        settings-path: ${{ github.workspace }} # location for the settings.xml file
       - name: Download kafka-admin-client artifact
         uses: actions/download-artifact@v1
         with:
