--- a/consolidator/Dockerfile
+++ b/consolidator/Dockerfile
@@ -14,7 +14,7 @@ ARG ballerina_download_url=https://dist.ballerina.io/downloads/2201.8.6/ballerin
 ENV consolidator_config_file_url_env=${consolidator_config_url}
 COPY ./target/bin/*.jar consolidator.jar
 EXPOSE 9192
-RUN wget -q --show-progress ${ballerina_download_url} -O ballerina-linux-installer-x64.deb
+RUN apk add --no-cache wget && wget -q --show-progress ${ballerina_download_url} -O ballerina-linux-installer-x64.deb
 RUN dpkg -i ballerina-linux-installer-x64.deb
 #TODO Link to be parameterized instead of hardcoding
 CMD wget -q --show-progress "${consolidator_config_file_url_env}" -O Config.toml;\
