--- a/consolidator/Dockerfile
+++ b/consolidator/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:17
+FROM eclipse-temurin:17-jre-alpine
 
 ARG SOURCE
 ARG COMMIT_HASH
@@ -14,8 +14,9 @@ ARG ballerina_download_url=https://dist.ballerina.io/downloads/2201.8.6/ballerin
 ENV consolidator_config_file_url_env=${consolidator_config_url}
 COPY ./target/bin/*.jar consolidator.jar
 EXPOSE 9192
-RUN apt update && apt install wget -y
+RUN apk add -q wget dpkg zstd
 RUN wget -q --show-progress ${ballerina_download_url} -O ballerina-linux-installer-x64.deb
+RUN dpkg --add-architecture amd64
 RUN dpkg -i ballerina-linux-installer-x64.deb
 #TODO Link to be parameterized instead of hardcoding
 CMD wget -q --show-progress "${consolidator_config_file_url_env}" -O Config.toml;\
