--- a/kafka-admin-client/pom.xml
+++ b/kafka-admin-client/pom.xml
@@ -38,20 +38,42 @@
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
+		<apache.kafka.version>2.8.0</apache.kafka.version>
+		<junit.version>4.13.2</junit.version>
+		<mockito.version>3.11.2</mockito.version>
+		<powermock.version>2.0.9</powermock.version>
+		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-clients</artifactId>
-			<version>2.8.0</version>
+			<version>${apache.kafka.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13.2</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito.version}</version>
+		</dependency>
+		<dependency>
+      		<groupId>org.powermock</groupId>
+      		<artifactId>powermock-module-junit4</artifactId>
+      		<version>${powermock.version}</version>
+      		<scope>test</scope>
+   		</dependency>
+   		<dependency>
+      		<groupId>org.powermock</groupId>
+      		<artifactId>powermock-api-mockito2</artifactId>
+      		<version>${powermock.version}</version>
+      		<scope>test</scope>
+   		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -77,7 +99,22 @@
 					</includeOnlyProperties>
 					<commitIdGenerationMode>full</commitIdGenerationMode>
 					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
-					<!-- <format>json</format> -->
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven.surefire.plugin.version}</version>
+				<configuration>
+					<skipTests>false</skipTests>
+					<skip>false</skip>
+					<argLine>
+						${argLine}
+						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-opens java.base/java.util=ALL-UNNAMED
+						--illegal-access=debug
+						--enable-preview
+					</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
