--- a/kafka-admin-client/pom.xml
+++ b/kafka-admin-client/pom.xml
@@ -248,6 +248,7 @@
 			<properties>
 				<sonar.sources>.</sonar.sources>
 				<sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
+				<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco-aggregate/</sonar.coverage.jacoco.xmlReportPaths>
 				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 			</properties>
 			<activation>
