--- a/hub/Ballerina.toml
+++ b/hub/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 org = "mosip"
 name = "kafkaHub"
-version = "1.2.1-java17-SNAPSHOT"
+version = "1.2.1-SNAPSHOT"
 
 [build-options]
 observabilityIncluded = true
@@ -10,5 +10,5 @@ observabilityIncluded = true
 modules = ["inittopic"]
 groupId = "io.mosip"
 artifactId = "kafka-admin-client"
-version = "1.2.1-java17-SNAPSHOT"
-path = "kafka-admin-client/target/kafka-admin-client-1.2.1-java17-SNAPSHOT.jar"
+version = "1.2.1-SNAPSHOT"
+path = "kafka-admin-client/target/kafka-admin-client-1.2.1-SNAPSHOT.jar"
